--- a/app/views/home/home.html.haml
+++ b/app/views/home/home.html.haml
@@ -6,7 +6,7 @@
 
 .row.g-4
   .col-lg-7.col-xl-8
-    = render('competitions_card', competitions: Competition.all.upcoming)
+    = render('competitions_card', competitions: Competition.all)
 
   .col-lg-5.col-xl-4
     = render('info_card')
