--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -270,3 +270,18 @@
     opacity: 0
   100%
     opacity: 1
+
+.suggestions-entries
+  overflow: auto
+  height: 200px
+  border: 1px solid $light
+  margin-bottom: 10px
+  .first_name, .last_name
+    width: 33%
+  .team
+    width: 33%
+    font-size: 10px
+  tr
+    cursor: pointer
+  tr:hover
+    background-color: $light
