--- a/app/views/competitions/_header.html.haml
+++ b/app/views/competitions/_header.html.haml
@@ -10,7 +10,7 @@
       = tabs.link_to Team, competition_teams_path
     - if @competition.disciplines.single_disciplines.exists?
       = tabs.link_to Person, competition_people_path
-    = tabs.link_to Score::List, competition_score_lists_path, active: resource_class.in?([Score::List, Score::ListFactory])
+    = tabs.link_to Score::List, competition_score_lists_path, active: resource_class.in?([Score::List, Score::ListFactory, Score::Run])
     - if @competition.bands.exists? && @competition.disciplines.exists?
       = tabs.link_to Score::Result, competition_score_results_path
     - if can?(:manage, @competition)
