--- a/app/views/competitions/score/lists/show.html.haml
+++ b/app/views/competitions/score/lists/show.html.haml
@@ -12,17 +12,17 @@
                 = render layout: 'list_entry', locals: { entry:, run:, track:, list: @list, best_of_run: } do
                   - if @list.separate_target_times?
                     %td.separate-times
-                      = entry.try(:human_time_left_target)
+                      = entry&.human_time_left_target
                       %br
-                      = entry.try(:human_time_right_target)
+                      = entry&.human_time_right_target
                   %td.time-col
-                    = entry.try(:human_time)
-                    - if can?(:edit, @list) && can?(:edit_times, @list)
-                      .pull-right
-                        - if track == 1 && params[:destroy_index].nil?
-                          = short_edit_link edit_competition_score_list_run_path(list_id: @list.id, run:), title: 'Zeiten bearbeiten', class: 'btn-xs'
-                        - if entry.present? && params[:destroy_index]
-                          = short_destroy_link destroy_entity_competition_score_list_path(id: @list, entry_id: entry.id), title: 'Aus Liste entfernen', class: 'btn-xs'
+                    = entry&.human_time
+                  - if can?(:edit, @list) && can?(:edit_times, @list)
+                    %td.text-end
+                      - if track == 1 && params[:destroy_index].nil?
+                        = short_edit_link edit_competition_score_list_run_path(list_id: @list.id, run:), title: 'Zeiten bearbeiten', class: 'btn-xs'
+                      - if entry.present? && params[:destroy_index]
+                        = short_destroy_link destroy_entity_competition_score_list_path(id: @list, entry_id: entry.id), title: 'Aus Liste entfernen', class: 'btn-xs'
         - card.actions do |actions|
           = actions.link_to 'als PDF', { format: :pdf }, target: '_blank', rel: 'noopener'
           = actions.link_to 'als XLS', format: :xlsx
