--- a/app/views/competitions/score/results/_result_table.html.haml
+++ b/app/views/competitions/score/results/_result_table.html.haml
@@ -2,54 +2,54 @@
   %tr
     - if places
       %th
-    - if @discipline.single_discipline_or_double_event?
-      - if Competition.one.show_bib_numbers?
+    - if @discipline.single_discipline?
+      - if @competition.show_bib_numbers?
         %th.hidden-xs Nr.
       %th Name
     %th Mannschaft
-    - if @score_result.is_a? Score::DoubleEventResult
+    - if @result.is_a? Score::DoubleEventResult
       %th Summe
-      - @score_result.results.each do |result|
+      - @result.results.each do |result|
         %th= discipline_image result.assessment.discipline.decorate
     - else
       %th Bestzeit
-      - @score_result.lists.each do |list|
+      - @result.lists.each do |list|
         - if list.separate_target_times?
-          %th{ colspan: 2 }= list.object.shortcut
+          %th{ colspan: 2 }= list.shortcut
         - else
-          %th= list.object.shortcut
+          %th= list.shortcut
 
   - rows.each do |row|
     %tr
       - if places
-        %td.less-important #{@score_result.place_for_row(row)}.
-      - if @discipline.single_discipline_or_double_event?
-        - if Competition.one.show_bib_numbers?
-          %td.hidden-xs= row.entity.try(:bib_number)
+        %td.less-important #{@result.place_for_row(row)}.
+      - if @discipline.single_discipline?
+        - if @competition.show_bib_numbers?
+          %td.hidden-xs= row.entity&.bib_number
         %td
           = row.entity.try(:to_s)
           = row.entity&.fire_sport_statistics_person&.personal_best_badge(row.best_result_entry)
         %td.less-important= row.entity&.team&.shortcut_name
       - else
         %td
-          = row.entity
+          = row.entity.numbered_name
           - if row.entity.fire_sport_statistics_team.present?
             = link_to image_tag('statistiken-logo.png'), "https://feuerwehrsport-statistik.de/teams/#{row.entity.fire_sport_statistics_team_id}", target: '_blank', rel: 'noopener', title: 'Informationen über diese Mannschaft auf Feuerwehrsport-Statistik.de aufrufen', class: 'firesport-statistic-link'
       - if row.is_a?(Score::DoubleEventResultRow)
         %td
           %strong= row.sum_result_entry
-        - @score_result.results.each do |result|
+        - @result.results.each do |result|
           %td= row.result_entry_from(result)
       - else
         %td
-          %strong= row.best_result_entry
-        - @score_result.lists.each do |list|
+          %strong= row.best_result_entry.human_time
+        - @result.lists.each do |list|
           - if list.separate_target_times?
             %td.separate-times
-              = row.result_entry_from(list).try(:human_time_left_target)
+              = row.result_entry_from(list)&.human_time_left_target
               %br
-              = row.result_entry_from(list).try(:human_time_right_target)
+              = row.result_entry_from(list)&.human_time_right_target
             %td
-              = row.result_entry_from(list)
+              = row.result_entry_from(list)&.human_time
           - else
-            %td.less-important= row.result_entry_from(list)
+            %td.less-important= row.result_entry_from(list)&.human_time
