--- a/app/views/competitions/score/lists/destroy_entity.html.haml
+++ b/app/views/competitions/score/lists/destroy_entity.html.haml
@@ -11,5 +11,5 @@
             - unless g.object.result_waiting?
               .alert.alert-danger Achtung: Die eingetragene Zeit wird unwiderruflich gelöscht!
         - card.footer do
-          = f.primary_button :submit, "Teilnehmer entfernen"
+          = f.primary_button :submit, 'Teilnehmer entfernen'
           = f.cancel_button(action: :show)
