--- a/app/views/competitions/score/lists/edit_times.html.haml
+++ b/app/views/competitions/score/lists/edit_times.html.haml
@@ -6,11 +6,11 @@
       = card "#{@list.name} aktualisieren" do |card|
         - card.direct do
           %table.table
-            = render 'list_headline', times: true , list: @list
+            = render 'list_headline', times: true, list: @list
             %tbody
               - score_list_entries(@list) do |entry, run, track, _best_of_run|
-                = render layout: 'list_entry', locals: { entry: entry, run: run, track: track, list: @list, best_of_run: false } do
-                  = render 'competitions/score/runs/edit_time', entry: entry, f: f, fields_for: :entries
+                = render layout: 'list_entry', locals: { entry:, run:, track:, list: @list, best_of_run: false } do
+                  = render 'competitions/score/runs/edit_time', entry:, f:, fields_for: :entries
         - card.footer do
-          = f.primary_button :submit, "Speichern"
+          = f.primary_button :submit, 'Speichern'
           = f.cancel_button(action: :show)
