--- a/app/views/competitions/score/lists/show.html.haml
+++ b/app/views/competitions/score/lists/show.html.haml
@@ -2,7 +2,7 @@
 
 .row.g-4
   .col-md-8
-    = card( @list.name) do |card|
+    = card(@list.name) do |card|
       - if can?(:edit, @list) || !@list.hidden?
         - card.direct do
           %table.table.much-data
@@ -32,12 +32,11 @@
   .col-md-3
     - if can?(:edit, @list)
       - if @list.hidden?
-        = card('Versteckt', class: "mb-3 text-bg-warning") do |card|
+        = card('Versteckt', class: 'mb-3 text-bg-warning') do |card|
           - card.body do
             %p Die Startliste ist derzeit noch versteckt. Bitte geben Sie diese nach der Kontrolle frei.
             - if can?(:edit, @list)
               = btn_link_to 'Bearbeiten', { action: :edit }
-
 
       = card(t('a.actions'), class: 'mb-3') do |card|
         - card.primary_actions do |actions|
