--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -285,3 +285,37 @@
     cursor: pointer
   tr:hover
     background-color: $light
+
+span.best-badge
+  display: inline-block
+  min-width: 18px
+  padding: 4px 4px
+  font-size: 10px
+  color: #fff
+  line-height: 1
+  white-space: nowrap
+  text-align: center
+  border-radius: 7px
+  background-color: #daecf7
+  min-height: 18px
+  font-weight: bold
+  cursor: help
+  vertical-align: middle
+  float: right
+  &.personal-best
+    background-color: #b2dbb2
+
+.balloon-tip
+  position: absolute
+  background: white
+  border: 1px solid $light
+  padding: 1rem
+  font-size: 0.8em
+  border-radius: $border-radius $border-radius 0 0
+
+  img.statistiken-logo
+    height: 2em
+    margin: 8px
+  table img
+    height: 1em
+    width: 1em
