--- a/app/views/competitions/people/_form.html.haml
+++ b/app/views/competitions/people/_form.html.haml
@@ -1,12 +1,48 @@
 - card.body do
+  - unless @person.persisted?
+    = hidden_field_tag :band_id, @person.band_id
+  = f.association :band, disabled: true
+
+  .form-group.string
+    %label.string.control-label{ for: 'person_suggestion' } Schnelleingabe
+    %input.string.form-control{ name: 'person_suggestion', id: 'person_suggestion', type: 'text', data: { team_name: @person.team&.name }, autocomplete: :off }
+  .suggestions-entries.for-people
+    %table.table.table-hover.table-condensed
+
   .row
-    .col-lg-3= f.input :bib_number
+    .col-md-6
+      = f.input :first_name
+    .col-md-6
+      = f.input :last_name
+
   .row
-    .col-lg-6= f.input :first_name
-    .col-lg-6= f.input :last_name
-  = f.input :band_id, input_html: { value: params[:band_id] }, as: :hidden
-  = f.association :competition, collection: Competition.accessible_by(current_ability)
+    - if @person.team.nil? || !@person.team.persisted?
+      .col-md-6
+        = f.association :team, label_method: ->(team) { team.numbered_name_with_band }, label: 'Vorhandene Mannschaft', collection: @person.band.teams
+      .col-md-6
+        %datalist#team-names
+          - @competition.teams.reorder(:name).distinct.pluck(:name).each do |team_name|
+            %option{ value: team_name }
+        = f.input :create_team_name, input_html: { list: 'team-names' }
+    - else
+      .col-md-6
+        %strong Mannschaft:
+        = @person.team
+      = f.hidden_field :team_id
+    - if @competition.show_bib_numbers?
+      .col-md-6
+        = f.input :bib_number
+
+  = f.hidden_field :fire_sport_statistics_person_id, data: { first_name: @person.fire_sport_statistics_person&.first_name, last_name: @person.fire_sport_statistics_person&.last_name }
+
+  .mb-0.mt-3 Verknüpfung
+  = render('connected', person: @person, remove: true)
+  %small.form-text.text-muted Eine Verknüpfung ist bei Wettkampfserien wichtig, um vorhanden Ergebnisse zu nutzen.
+
 
 - card.footer do
   = f.primary_button :submit
   = f.cancel_button(competition_people_path)
+
+
+
