--- a/app/views/competitions/score/runs/edit.html.haml
+++ b/app/views/competitions/score/runs/edit.html.haml
@@ -9,8 +9,8 @@
           %table.table.much-data
             = render 'competitions/score/lists/list_headline', times: true, list: @list
             - @run.list_entries.each do |entry|
-              = render layout: 'competitions/score/lists/list_entry', locals: { entry: entry, run: @run.run_number.to_i, track: entry.track, list: @run.list, best_of_run: false } do
-                = render 'competitions/score/runs/edit_time', entry: entry, f: f, fields_for: :list_entries
+              = render layout: 'competitions/score/lists/list_entry', locals: { entry:, run: @run.run_number.to_i, track: entry.track, list: @run.list, best_of_run: false } do
+                = render 'competitions/score/runs/edit_time', entry:, f:, fields_for: :list_entries
         - card.footer do
-          = f.primary_button :submit, "Speichern"
+          = f.primary_button :submit, 'Speichern'
           = f.cancel_button(competition_score_list_path(id: @list.id))
