--- a/app/views/competitions/teams/_form.html.haml
+++ b/app/views/competitions/teams/_form.html.haml
@@ -3,13 +3,13 @@
     = hidden_field_tag :band_id, @team.band_id
   = f.association :band, disabled: true
   = f.input :name, input_html: { autocomplete: :off }, hint: 'Keine Nummern im Namen angeben!'
-  .suggestions-entries
+  .suggestions-entries.for-teams
     %table.table.table-hover.table-condensed
   = f.input :shortcut, input_html: { maxlength: 12 }, hint: 'Keine Nummern im Namen angeben!'
-  = f.input :number, hint: "Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt."
+  = f.input :number, hint: 'Die Nummer wird erst angezeigt, wenn es mehrere Mannschaften mit gleichen Namen gibt.'
   - if @team.band.team_tags.present?
     = f.input :tags, as: :check_boxes, collection: @team.band.team_tags
-  = f.hidden_field :fire_sport_statistics_team_id, data: { name: @team.fire_sport_statistics_team&.name}
+  = f.hidden_field :fire_sport_statistics_team_id, data: { name: @team.fire_sport_statistics_team&.name }
 
   .mb-0.mt-3 Verknüpfung
   = render('connected', team: @team, remove: true)
