--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -319,3 +319,38 @@ span.best-badge
   table img
     height: 1em
     width: 1em
+
+
+fieldset.group
+  border: var(--bs-border-width) solid #e0dad7
+  border-radius: $border-radius
+  margin: 0.25rem
+  padding: 0.5rem
+
+  legend
+    font-size: 1.3rem
+
+
+
+.time-types
+  border-left: 1px solid $light
+  input
+    margin-right: 0.6rem
+  span
+    display: block
+    margin-left: 0.8rem
+    label
+      font-size: 0.7rem
+      margin-bottom: 0
+.time-entries
+  label
+    font-size: 0.6rem
+    font-weight: normal
+  .form-group
+    display: inline-block
+    text-align: center
+    margin-left: 6px
+  input
+    width: 6rem
+  &.disabled-time-entries
+    opacity: 0.3
