--- a/app/views/competitions/bands/_index_table.html.haml
+++ b/app/views/competitions/bands/_index_table.html.haml
@@ -3,7 +3,7 @@
     %th= resource_class.human_attribute_name(:name)
     %th= resource_class.human_attribute_name(:gender)
     %th= resource_class.human_attribute_name(:assessments)
-    %th{ colspan: 2 } Markierungen
+    %th{ colspan: 2 } Kennzeichnungen
     %th
   - resource_collection.sort.each do |band|
     %tr
