--- a/app/views/competitions/score/lists/_list_headline.html.haml
+++ b/app/views/competitions/score/lists/_list_headline.html.haml
@@ -13,4 +13,7 @@
     - if times
       - if list.separate_target_times?
         %th Ziele
-      %th Zeit
+        - unless edit
+          %th Zeit
+      - else
+        %th Zeit
