--- a/app/views/competitions/people/_form.html.haml
+++ b/app/views/competitions/people/_form.html.haml
@@ -33,6 +33,9 @@
       .col-md-6
         = f.input :bib_number
 
+  - if @person.band.person_tags.present?
+    = f.input :tags, as: :check_boxes, collection: @person.band.person_tags
+
   = f.hidden_field :fire_sport_statistics_person_id, data: { first_name: @person.fire_sport_statistics_person&.first_name, last_name: @person.fire_sport_statistics_person&.last_name }
 
   .mb-0.mt-3 Verknüpfung
