--- a/app/views/competitions/people/edit_assessment_requests.html.haml
+++ b/app/views/competitions/people/edit_assessment_requests.html.haml
@@ -20,11 +20,11 @@
                     = g.input :single_competitor_order
                   .col-md-3.competitor-order
                     - case assessment.discipline.key
-                    - when :fs
+                    - when "fs"
                       = g.input :competitor_order, collection: AssessmentRequestDecorator.fs_names.each_with_index.map { |n, i| [n, i] }, include_blank: false
-                    - when :la
+                    - when "la"
                       = g.input :competitor_order, collection: AssessmentRequestDecorator.la_names.each_with_index.map { |n, i| [n, i] }, include_blank: false
-                    - when :gs
+                    - when "gs"
                       = g.input :competitor_order, collection: AssessmentRequestDecorator.gs_names.each_with_index.map { |n, i| [n, i] }, include_blank: false
                     - else
                       = g.input :competitor_order
