--- a/app/views/home/_impressum_card.html.haml
+++ b/app/views/home/_impressum_card.html.haml
@@ -16,7 +16,7 @@
   .card-header
     %h4.mb-0 Hinweise
   .card-body
-    %p Diese Webseite betreibe ich kostenlos als Privatperson. Sollte sich jemand durch die Verwendung der Daten in seinem Urheberrecht verletzt fühlen, bitte nicht sofort abmahnen, sondern eine E-Mail schreiben. Dies spart Zeit und Geld.
+    %p Diese Webseite betreibe ich kostenlos als Privatperson. Sollte sich jemand durch die Verwendung der Daten in seinem Urheberrecht verletzt fühlen, bitte nicht sofort Abmahnen, sondern eine E-Mail schreiben. Dies spart Zeit und Geld.
 
     %p Die veröffentlichten Daten und Dateien stammen von den registrierten Nutzern. Ich übernehme also keine Verantwortung für Richtigkeit oder Vollständigkeit der hier veröffentlichen Daten.
 
