--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,16 +1,14 @@
 = render 'devise/header'
-= page_title 'Passwort vergessen?'
 
 .row
   .col-md-8
     = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
-      .card
-        .card-body
-          = f.error_notification
-
-          .form-inputs
-            = f.input :email, autofocus: true, required: true, input_html: { autocomplete: 'email' }
-          .btn-toolbar.mt-3
-            = f.button :submit, 'Link zum Zurücksetzen zusenden', class: 'btn btn-primary'
+      = card('Passwort vergessen?') do |c|
+        - c.body do
+          = f.input :email, autofocus: true, required: true, input_html: { autocomplete: 'email' }
+        - c.footer do
+          = f.primary_button :submit, 'Link zum Zurücksetzen zusenden'
   .col-md-4
-    = render 'devise/shared/links'
+    = card('Hinweise') do |c|
+      - c.body do
+        Wenn du dein Paswort für diese Seite vergessen hast, kannst du dir einen Link zum Zurücksetzen zusenden lassen. Wenn du die E-Mail nicht findest, schaue bitte auch in deinem Spam-Verzeichnis nach.
